# Retargetable-Compiler

./: README.md
DUP1.0/: AUTHORS  ChangeLog  DUP_config.h  DUP_config.h.in  HACKING  Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool  pre-commit  stamp-h1
DUP1.0/.svn/: all-wcprops  dir-prop-base  entries
DUP1.0/.svn/text-base/: Makefile.am.svn-base  README.svn-base  bootstrap.svn-base
DUP1.0/autom4te.cache/: output.0  output.1  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
DUP1.0/contrib/: Doxyfile  coverage.sh
DUP1.0/contrib/.svn/: all-wcprops  entries
DUP1.0/contrib/sound_demo/: stream_mp3_demo_cacaphony.dup  stream_mp3_demo_local.dup
DUP1.0/contrib/sound_demo/.svn/: all-wcprops  entries
DUP1.0/contrib/sound_demo/.svn/text-base/: stream_mp3_demo_single.dup.svn-base
DUP1.0/contrib/video/: 4videos_from_file_dupplay.conf
DUP1.0/contrib/video/.svn/: all-wcprops  entries
DUP1.0/doc/: Makefile  Makefile.am  Makefile.in  append.1  buffer-dup.1  deal.1  devrandom_gen_random.1  dup-grammar.txt  duplicate.1  eat.1  faninany.1  fanout.1  gate.1  gmp_gen_random.1  holmerge.1  lookup.1  mgrep.1  router.1  zos-port.txt
DUP1.0/doc/.svn/: all-wcprops  dir-prop-base  entries
DUP1.0/doc/.svn/text-base/: cmd.1.svn-base  delay.1.svn-base  drop.1.svn-base  dup.1.svn-base  dupd.1.svn-base  gather.1.svn-base  millerrabin.1.svn-base  nodelay.1.svn-base  protocol.tex.svn-base
DUP1.0/results/: primeHistogram.gnuplot
DUP1.0/results/.svn/: all-wcprops  entries
DUP1.0/src/: Makefile  Makefile.am  Makefile.in
DUP1.0/src/.svn/: all-wcprops  entries
DUP1.0/src/applications/: Makefile.am
DUP1.0/src/applications/.svn/: all-wcprops  dir-prop-base  entries
DUP1.0/src/applications/.svn/text-base/: configure.ac.svn-base
DUP1.0/src/applications/fides/: M1.R1.C1.01.xml  M100.R100.C100.01.xml  M100.R500.C1000.01.dup  M100.R500.C1000.01.xml  M100.R500.C1000.02.dup  M100.R500.C1000.02.xml  M100.R500.C1000.03.dup  M100.R500.C1000.04.dup  M100.R500.C1000.04.xml  M100.R500.C1000.05.xml  M1000.R1000.C5000.01.dup  M1000.R5000.C5000.01.dup  M5.R5.C5.01.dup  M5.R5.C5.01.xml  M50.R50.C50.01.xml  canbus.cc  cansim.h  commsim.cc  commsim.h  commsim2dup4.xsl  commsim2ssim.xsl  consumer.cc  consumer_file.xsl  fides.cc  fides.h  generate_commsim_xml.py  hello_commsim.xml  manufacturer_file.xsl  router.cc  statekeeper.cc  test_Process.cc  test_retailer.sh  test_statekeeper.sh
DUP1.0/src/applications/fides/.svn/: all-wcprops  dir-prop-base  entries
DUP1.0/src/applications/fides/M100.R100.C100/: c2.dup  c3.dup  c4.dup  main_dup_nofiles.conf
DUP1.0/src/applications/fides/docs/: fides.tex
DUP1.0/src/applications/microbenchmarks/: AF_UNIX_STREAM_perf.c  AF_UNIX_STREAM_perf.h  AF_UNIX_STREAM_server.c  calibrate_driver.h  ipc_gnuplot.sh  memcpy_perf.h  msq_perf.c  pipe_perf.h  script_gnuplot  shm_perf.c  shm_perf.h  tcp_socket_perf.c
DUP1.0/src/applications/microbenchmarks/.svn/: all-wcprops  dir-prop-base  entries
DUP1.0/src/applications/microbenchmarks_smp/: AF_UNIX_DGRAM_server.c  client_server_common.c  client_server_common.h  common.h  helper_lib.c  smp_AF_UNIX_DGRAM_perf.h  smp_msq_perf.c  smp_pipe_perf.h  tcp_simple_server.c
DUP1.0/src/applications/microbenchmarks_smp/.svn/: all-wcprops  (+1 more)
DUP1.0/src/applications/primeGen/: Makefile.am  devrandom_gen_random.c  gmp_gen_random.c  millerrabin.c  primeMix.py  test_devrandom_gen_random.sh
DUP1.0/src/applications/tcpsplit/: balancer.c  tcpsplit_fds.c
DUP1.0/src/applications/video/: Makefile.am  camdelay.c  dupcam.c  dupcam.h  dupio.c  dupio.h  dupvids.c  jpg.c  jpg.h  mresize.c  play.c  siva.c  siva.h
DUP1.0/src/dup/: Makefile  Makefile.in  control_connection.cc  cycle_filter.sh  dup  dup.cc  dupparse.yy  edge.cc  parser  process.cc  process.h  strnfuncs.h  test_duplicate_fd.sh  test_nested_dup.sh  test_openfd.sh  test_option_c.sh  test_parser.sh  test_simple_dup.sh
DUP1.0/src/dup/.deps/: control_connection.Po  dup.Po  dup_string.Po  duplex.Po  parser.Po  process.Po  strnfuncs.Po
DUP1.0/src/dup/.svn/: all-wcprops  dir-prop-base  entries
DUP1.0/src/dupd/: Makefile  Makefile.am  Makefile.in  base_stream.cc  base_stream.h  dupd  dupd.cc  file_descriptor.h  io_descriptor.cc  listen_stream.h  read_dup_stream.cc  read_dup_stream.h  read_dupd_stream.h  unknown_stream.h  write_dupd_stream.h  write_pipe_stream.cc  write_pipe_stream.h
DUP1.0/src/dupd/.deps/: base_stream.Po  dupd.Po  file_descriptor.Po  process.Po  read_pipe_stream.Po  session_stream.Po  write_pipe_stream.Po
DUP1.0/src/dupd/.svn/: all-wcprops  dir-prop-base  entries
DUP1.0/src/filters/: Makefile  Makefile.in  append  append.c  buffer-dup  buffer-dup.c  cbuffer.h  cmd  cmd.c  common.c  complete  complete.c  copyargs  count  count.c  deal  delay  delay.c  drop  dup_filter_lib.h  duplicate  duplicate.c  eof  exec_no_stdin  exec_no_stdin.c  exec_no_stdout  exec_no_stdout.c  faninany  fanout  gate  gate.c  gather  gather.c  holmerge  jointime  jointime.c  lookup  lookup.c  metrics.txt  mgrep  (+23 more)
DUP1.0/src/filters/.deps/: cbuffer.Po  cmd.Po  complete.Po  copyargs.Po  count.Po  delay.Po  exec_no_stdin.Po  exec_no_stdout.Po  fanout.Po  gate.Po  gather.Po  lookup.Po  mgrep.Po  nodelay.Po  router.Po
DUP1.0/src/filters/.libs/: append  buffer-dup  cmd  complete  count  deal  drop  duplicate  faninany  fanout  gate  gather  holmerge  libdupfilters.la  lookup  mgrep  router
DUP1.0/src/filters/.svn/: all-wcprops  dir-prop-base  entries
DUP1.0/src/include/: Makefile  Makefile.am  Makefile.in
DUP1.0/src/include/.svn/: all-wcprops  entries
DUP1.0/src/utilities/: .toprc  Makefile  Makefile.in  dprof  dprof.cc  dup_analysis_grapher.py  dup_dot_printer  dupap  dupap.cc  duplex.c  dupparse.cc  dupparse.h  example_simulation.xml  execvother  execvother.cc
DUP1.0/src/utilities/.deps/: common.Plo  dup_dot_printer.Po  dup_string.Po  duplex.Po  dupparse.Po  edge.Po  execvother.Po  process.Po  strnfuncs.Po
DUP1.0/src/utilities/.libs/: libdupfilters.lai
DUP1.0/src/utilities/.svn/: all-wcprops  dir-prop-base  entries
(+2494 files in other folders)
