man_MANS = \
  append.1 \
  buffer-dup.1 \
  cmd.1 \
  deal.1 \
  delay.1 \
  drop.1 \
  dup.1 \
  dupd.1 \
  duplicate.1 \
  eat.1 \
  faninany.1 \
  fanout.1 \
  gate.1 \
  gather.1 \
  gmp_gen_random.1 \
  holmerge.1 \
  lookup.1 \
  millerrabin.1 \
  mgrep.1 \
  nodelay.1 \
  router.1 

EXTRA_DIST = \
  $(man_MANS) \
  dup-grammar.txt \
  protocol.tex


